feat(entry-point-facade): filter on get messages
